# pragmatic-claude

./: .gitignore  Brewfile  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SYSTEM_PROMPT.md  install.sh  permissions.shared.json  settings.json  settings.shared.json  statusline.sh  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
agents/: auditor.md  git.md  reviewer.md
commands/: address-pr-comments.md  adr.md  brainstorm.md  commit-and-push.md  create-pull-request.md  deep-review.md  git-push.md  implement.md  learn-project.md  pr-review.md  quick-review.md  repo-audit.md  sanitize-personal-commits.md  scope.md
docs/: 01-plan-and-implement.md  02-review-and-pr-flow.md  03-decisions-and-memory.md  04-authoring-commands-skills-hooks.md  05-internals-launcher-and-hooks.md  06-internals-memory-and-routing.md  index.md
hooks/: auto-model-detect.sh  bg-await-guard.sh  bg-await-guard.test.sh  git-push-interceptor.py  hooks.json  incr-counter.test.sh  no-dash-guard.sh  no-dash-guard.test.sh  plan-mode-enter.sh  post-edit-track.sh  (+9 more)
scripts/sanitize-personal-commits/: pyproject.toml  sanitize-personal-commits
scripts/sanitize-personal-commits/sanitize_personal_commits/: __init__.py  git_ops.py  lock.py  logger.py  plan.py  planner.py  squash.py  windows.py
scripts/sanitize-personal-commits/tests/: test_git_ops.py  test_integration.py  test_lock.py  test_logger.py  test_plan.py  test_planner.py  test_seed.py  test_squash_message.py  test_squash_plan.py  test_squash_rebuild.py  test_windows.py
(+72 files in other folders)
