# SPDX-FileCopyrightText: 2026 Igor Santos
# SPDX-License-Identifier: Apache-2.0
[project]
name = "sanitize-personal-commits"
version = "0.1.0"
description = "Rewrite unpushed git commit timestamps that fall in business hours."
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
